--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"@chromatic-com/storybook": "^4",
 		"@eslint/compat": "^1.2.5",
 		"@eslint/js": "^9.18.0",
+		"@lucide/svelte": "^0.511.0",
 		"@playwright/test": "^1.49.1",
 		"@storybook/addon-a11y": "^9.0.3",
 		"@storybook/addon-docs": "^9.0.3",
@@ -36,6 +37,7 @@
 		"@testing-library/jest-dom": "^6.6.3",
 		"@testing-library/svelte": "^5.2.4",
 		"@types/node": "^22",
+		"clsx": "^2.1.1",
 		"eslint": "^9.18.0",
 		"eslint-config-prettier": "^10.0.1",
 		"eslint-plugin-storybook": "^9.0.3",
@@ -48,7 +50,10 @@
 		"storybook": "^9.0.3",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
+		"tailwind-merge": "^3.0.2",
+		"tailwind-variants": "^1.0.0",
 		"tailwindcss": "^4.0.0",
+		"tw-animate-css": "^1.3.3",
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.20.0",
 		"vite": "^6.2.6",
